[package]
name = "btcturk"
version = "0.1.0"
description = "Unofficial BtcTurk exchange API bindings."
keywords = ["crypto", "exchange"]
repository = "https://github.com/mss1451/btcturk"
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
hmac = "0.12.1"
sha2 = "0.10.2"
base64 = "0.13.0"
crypto-common = "0.1.3"
thiserror = "1"
anyhow = "1"
surf = "2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = "1"
log = "0.4.14"

[dev-dependencies]
rust_decimal_macros = "1"
pretty_assertions = "1"
async-std = { version = "1", features = ["attributes"] }
env_logger = "0.9.0"

# Disabling incremental compilation reduces the amount of data written when
# building the project. It increases the build time a little bit but saves the
# SSD. Nearly a hundred megabytes of data can be written depending on the
# project size just by running cargo check due to incremental compilation.
[profile.dev]
incremental = false

[profile.release]
incremental = false